talos/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: example-gateway
    namespace: default
spec:
    gatewayClassName: cilium
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
              namespaces:
                  from: Same # only HTTPRoutes in the 'default' namespace
