talos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: nginx-route
    namespace: default
spec:
    parentRefs:
        - name: example-gateway
    hostnames:
        - "example.local"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: nginx # your nginx Service name
                port: 80
